# jsonpath-compiler

./: .gitignore  Cargo.toml  helpers.cpp  helpers.h  run_tests.py
jsonpath-compiler/: Cargo.toml
jsonpath-compiler/lib/: helpers.cpp  helpers.h
jsonpath-compiler/src/: compiler.rs  ir.rs  lib.rs  main.rs  targets.rs  test_helper.rs
jsonpath-compiler/src/compiler/: code_generator.rs  simdjson.rs  subquery_finder.rs
jsonpath-compiler/src/compiler/simdjson/: dom.rs  ondemand.rs
jsonpath-compiler/src/ir/: filter_generator.rs  generator.rs  procedure_segments.rs
jsonpath-compiler/src/targets/: simdjson.rs
jsonpath-compiler/src/targets/simdjson/: dom.rs  ondemand.rs
jsonpath-compiler/templates/ondemand/: header.cpp  instruction.cpp  lib.cpp  procedure.cpp  standalone.cpp
jsonpath-compiler/templates/simdjson/: bindings.rs
jsonpath-compiler/templates/simdjson/dom/: instruction.cpp  lib.cpp  procedure.cpp  standalone.cpp
jsonpath-compiler/templates/simdjson/ondemand/: filter_expression.cpp  filter_procedure.cpp  instruction.cpp  lib.cpp  macros.cpp  procedure.cpp  selection_condition.cpp  standalone.cpp
jsonpath-compiler/tests/: additional.rs  additional_filters.rs  cts.rs  filters.rs  test_helper.rs
