[package]
name = "jsonpath-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
rsonpath-syntax = "0.3.1"
itertools = "0.13.0"
clap = { version = "4.5.23", features = ["derive"] }
askama = "0.12.1"
clang-format = "0.3.0"
serde_json = "1.0.138"
cc = "1.0"
thiserror = "2.0.11"
paste = "1.0.15"
[dependencies.uuid]
version = "1.13.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
cc = "1.0"
[dev-dependencies.uuid]
version = "1.13.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
